--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
     <a class="navbar-brand" href="#">Mon projet</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,7 +16,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/AddProduct">AddProduct</a>
             </li>
-            
+            <li class="nav-item">
+                <a class="nav-link" href="/Formulaire">Formulaire</a>
+            </li>
         </ul>
         <input class="form-control len" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success m-2" type="submit">Search</button>
