--- a/src/app/add-Product/form.component.html
+++ b/src/app/add-Product/form.component.html
@@ -42,7 +42,7 @@
 
 
 
-                <button type="submit" class="btn btn-primary mt-3" [disabled]="SubmitForm.form.invalid">Submit</button>
+                <button type="submit" class="btn btn-primary mt-3" [disabled]="SubmitForm.form.invalid" (click)="add()">Submit</button>
 
 
             </form>
