--- a/src/app/offres-emploi/offres-emploi.component.html
+++ b/src/app/offres-emploi/offres-emploi.component.html
@@ -4,6 +4,12 @@
   
 </header>
 
+<div>
+  <p>Nombre d'offres clôturées : {{ alert }}</p>
+
+  </div>
+  
+
   <div>
   <p>Nombre d'offres non clôturées : {{ nombreOffresNonCloturees }}</p>
   <button type="button" class="btn btn-info" (click)="Bilan()">Bilan</button>
